--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
 body {
 	font-family: Century Gothic, Arial;
-	background-color: #444444;
+	/*height: 100%;*/
+	/*background-color: #bcbcbc;*/
+	background-color: #b2b2b2;
+}
 
+body, html {
+	height: 100%;
+	margin: 0;
+}
+
+.parallax {
+	
+	background-image: url("images/banner_back.png");
+
+	height: 50%;
+	background-repeat: no-repeat;
+    	background-attachment: fixed;
+    	background-position: center;
+    	background-size: cover;
 }
 
 a {
@@ -13,13 +30,12 @@ h1 {
 	margin: 0;
 }
 
-#container {
-	background-color: White;
-	width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
+.container {
+
+	width: 100%;
+	background-color: Black;
 	padding: 2px;
-	box-shadow: 5px 5px 18px #282828, -5px 5px 18px #282828
+
 }
 
 #top-bar {
@@ -27,6 +43,8 @@ h1 {
 	font-size: 14px;
 	color: White; 
 	width: 1000px;
+		margin-left: auto;
+	margin-right: auto;
 }
 
 #logins {
@@ -51,39 +69,40 @@ h1 {
 
 #header {
 	background-color: #1c2a3f;
-
-	text-align: center;
+	margin-top: 100px;
 }
 
 #content{
-	
+
 }
 
 #main{
 	padding: 2px;
 	width: 980px;
 	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	
 }
 
 .mainVideo {
 	/*background-color: #b2b2b2;*/
-	float: left;
-	width: 70%;
+	/*width: 70%;*/
 }
 
 .nextVideos {
-	background-color: #545454;
-	float: right;
+	background-color: black;
+
 	text-align: center;
 	width: 30%;
 }
 
 #navigation{
-	background-color: #1c2a3f;
+	float: right;
 	text-align: center;
-	width: 996px;
+	/*width: 996px;*/
 	padding: 2px;
-	margin: auto;
+	
 }
 
 #navigation ul {
@@ -105,47 +124,19 @@ h1 {
 	font-weight: bold;
 }
 
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
+.playthrough_banner img {
+	width: 100%;
+
 }
 
-.active, .accordion:hover {
-    background-color: #ccc; 
-}
-
-.accordion:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-}
-
-.active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-}
-
-.panel {
-    padding: 0 18px;
-    background-color: white;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+.playthrough_banner p {
+    text-align: justify;
+    letter-spacing: 3px;
 }
 
 #footer{
-	background-color: #000000;
 	clear: both;
-	color: White;
+	color: #3a3a3a;
 	padding: 5px 10px 5px 10px;
-	text-align: right;
+	text-align: center;
 }
